2010-12-17  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #16470: Scheduler fails to calculateNextValue a turn of the year (thanks to Tobias Hövelborn and Christian Kuhn)

2010-12-17  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #16764: Insufficient information about which class is failing to implement interfaces in tslib_cObj->start()

2010-12-16  Oliver Hader  <oliver.hader@typo3.org>

	* Release of TYPO3 4.4.5

2010-12-16  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #14402: XSS in Install tool (thanks to Benjamin Mack)
	* Fixed bug #16590: t3lib_TSparser::checkIncludeLines() does not check files to be included (thanks to Fabrizio Branca)
	* Fixed bug #15737: quoteStrForLike does not properly escape strings in sql_mode NO_BACKSLASH_ESCAPES
	* Fixed bug #16653: SQL injection problem in class.db_list.inc (thanks to Jigal van Hemert)
	* Fixed bug #15735: FORM content object is susceptible to XSS (thanks to Benjamin Mack)
	* Fixed bug #16362: Directory traversal attack in em_unzip
	* Fixed bug #16485: Cross-Site Scripting in showpic functionality
	* Fixed bug #16593: It is possible to bypass 'verifyFilenameAgainstDenyPattern'
	* Follow-up to bug #16593: Added unit tests

2010-12-07  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16696: [Caching framework] unit tests: Fatal error in t3lib_cache_backend_dbbackendTest due to call to undefined method

2010-12-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16675: htmlArea RTE: Incorrect result when inserting horizontal rule in FF and WebKit

2010-12-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16058: htmlArea RTE: Overlay to choose a color exceeds the viewport if many colors are defined

2010-01-01  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #16604: Changes in workspace are not shown automatically in pagetree
	* Fixed bug #15495: Pagetree fails to reload

2010-11-30  Steffen Gebert  <steffen@steffen-gebert.de>
