@@ -1,3 +1,7 @@
+2010-12-17  Steffen Kamper  <steffen@typo3.org>
+
+	* Fixed bug #14500: Bug: Unit test failures in t3lib_matchCondition_backend_testcase (Thanks to Oliver Klee)
+
 2010-12-17  Francois Suter  <francois.suter@typo3.org>
 
 	* Fixed bug #16470: Scheduler fails to calculateNextValue a turn of the year (thanks to Tobias Hövelborn and Christian Kuhn)
